# hydra-tape-engine

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_TEMPLATE.md  partitions_custom.csv  platformio.ini
.github/workflows/: core-equivalence.yml  web-pages.yml
docs/: CODE_REVIEW.md  FRIPPERTRONICS_REPORT.md  FUTURE_ENHANCEMENTS.md  README.md  RELEASE_CHECKLIST.md  hardware_esp32.md
dsp/core/: hydra_dsp_c_api.cpp  tape_core.cpp  tape_core.hpp
host/native/esp32/: hydra_dsp_esp32_adapter.cpp  hydra_dsp_esp32_adapter.h
host/web/: hydra-processor.js  index.html  main.js  presetSerialization.js  runtimeDiagnostics.js  transportController.js  transportState.js
host/web/tests/: presetSerialization.test.mjs  runtimeDiagnostics.test.mjs  transportController.test.mjs  transportState.test.mjs
include/: hydra_dsp.h
lib/DisplayUI/include/: DisplayUI.h  ParamDefs.h  hardware_pins.h
lib/DisplayUI/src/: DisplayUI.cpp  ParamDefs.cpp
lib/Frippertronics-Core/include/: Frippertronics_Core.h
lib/Frippertronics-Core/src/: Frippertronics_Core.cpp
lib/MelodyGen/include/: MelodyGen.h
lib/MelodyGen/src/: MelodyGen.cpp
lib/TapeDelay/include/: TapeDelay.h
lib/TapeDelay/src/: BubblesEngine.cpp  FreeverbEngine.cpp  FrippEngine.cpp  TapeDelay.cpp
scripts/: update_golden.sh
src/: hydra_dsp_build.cpp  main.cpp  main_fripp.cpp.bak
test/test_native/: reverses_mucho_lokos.bak  test_main.cpp
tests/core/: abi_symbols_check.py  build_ab_review_package.py  compare_native_wasm.py  generate_fixtures.py  golden_compare.py  golden_regression.cpp  golden_test.py  null_test_wav.py  regression_core.cpp  render_trace.cpp  smoke_core.cpp
tests/fixtures/: README.md
tests/fixtures/golden/native/: delay_modes.csv  param_automation.csv  reset_state.csv
tests/fixtures/input/: impulse.csv  music_excerpt.csv  noise_seeded.csv  sine_1khz.csv  sweep_log.csv
web-interface/: index.html
